Fix styling issues and style scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
 @layer utilities {
   .min-height {
     height: 80vh;
-    height: min(80vh, 100%);
+    height: min(80vh, 91%);
   }
 }
